html head, css rename

--- a/src/JavaGit/lesson1/index.html
+++ b/src/JavaGit/lesson1/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+<head>
 
-<h1>Hello kittie</h1>
-<img src="img/kittie.jpg" alt="Nice cat">
-
+    <h1>Hello kittie</h1>
+    <img src="img/kittie.jpg" alt="Nice cat">
+</head>
 </body>
 </html>
