--- a/src/JavaGit/lesson1/index.html
+++ b/src/JavaGit/lesson1/index.html
@@ -10,6 +10,7 @@
 
     <h1>Hello kittie</h1>
     <img src="img/kittie.jpg" alt="Nice cat">
+    <img src="img/grumpycat.jpg" alt="grumpy cat">
 </head>
 </body>
 </html>
